--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,81 @@
-body{
+body {
   margin: 0;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Raleway', sans-serif;
+}
+button:focus{
+  outline:none;
+}
+.split{
+  display: flex;
+}
+/* SIDEBAR */
+.pane {
+  overflow-y: auto;
+}
+.sidebar {
+  border: 1px solid red;
+  width: 20%;
+  height: 100vh;
+}
+
+.sidebar--header {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.sidebar--header > h3 {
+  font-size: 1.75rem;
+}
+
+.new-note-btn {
+  cursor: pointer;
+  background-color: #4a4e74;
+  border: none;
+  color: white;
+  border-radius: 3px;
+  height: 30px;
+  width: 30px;
+}
+
+.title{
+  border: 1px solid blue;
+  width: 100%;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  overflow: hidden;
+  justify-content: space-between;
+}
+.text-snippet{
+  padding-inline: 5px;
+  font-size: 0.8rem;
+  font-weight: 400;
+  line-height: 1.2rem;
+  color: #4a4e74;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.selected-note{
+  background-color: #4a4e74;
+}
+.selected-note .text-snippet{
+  color: white;
+  font-weight: 600;
+}
+
+/* EDITOR */
+.editor{
+  width: 80%;
+  height: 100vh;
 }
